// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders inactive notification modal when appropriate 1`] = `
Array [
  <div
    className="c-modal"
  >
    <div
      className="m-inactive-notification-modal__close-button"
    >
      <button
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-notification__title"
    >
      OTHER
       NOTIFICATION
    </div>
    <div
      className="m-inactive-notification-modal__body"
    >
      No runs associated with this notification are currently active in Skate. This notification may no longer be relevant.
    </div>
    <div
      className="m-inactive-notification-modal__buttons"
    >
      <button
        className="m-inactive-notification-modal__keep-button"
        onClick={[Function]}
      >
        Keep
      </button>
      <button
        className="m-inactive-notification-modal__discard-button"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </div>,
  <div
    className="c-modal-overlay"
  />,
]
`;

exports[`Modal renders loading modal when appropriate 1`] = `
Array [
  <div
    className="c-modal m-notification-loading-modal"
  >
    <div
      className="m-notification-loading-modal__spinner-wrapper"
    >
      <span
        className="c-loading-spinner"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </div>
    <div
      className="m-notification-loading-modal__text-wrapper"
    >
      Loading...
    </div>
  </div>,
  <div
    className="c-modal-overlay"
  />,
]
`;
